test/libsolidity/syntaxTests/pragma/experimental_multiple_experimental.sol
pragma experimental experimental __test;
// ----
// SyntaxError 6022: (0-40): Stray arguments.

